deployment-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  selector:
    app: app1
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  selector:
    matchLabels:
      app: app1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - image: wil42/playground:v2
        name: app1
        resources:
          limits:
            memory: 512Mi
            cpu: "0.5"
          requests:
            memory: 512Mi
            cpu: "0.5"
        ports:
        - containerPort: 8080
