deployment-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  selector:
    app: app2
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  selector:
    matchLabels:
      app: app2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - image: wil42/playground:v2
        name: app2
        resources:
          limits:
            memory: 512Mi
            cpu: "0.5"
          requests:
            memory: 512Mi
            cpu: "0.5"
        ports:
        - containerPort: 8080
