service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-will-svc
spec:
  selector:
    app: app-will
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080
